👕 edit env.example

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 PORT=8082
-IP_MONGODB=18.140.130.253
-DB_MONGODB=test-db
-USER_MONGODB=alphauser
-PASSWORD_MONGODB=alpha#1#2#3
+IP_MONGODB=localhost
+DB_MONGODB=speaker-type
+USER_MONGODB=
+PASSWORD_MONGODB=
