--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "moment": "^2.27.0",
     "mongodb": "^3.6.0",
     "mongoose": "^5.10.0",
-    "mongoose-delete": "^0.5.2"
+    "mongoose-delete": "^0.5.2",
+    "xlsx": "^0.16.6"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.5",
