--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongodb": "^3.6.0",
     "mongoose": "^5.10.0",
     "mongoose-delete": "^0.5.2",
+    "multer": "^1.4.2",
     "xlsx": "^0.16.6"
   },
   "devDependencies": {
